Add animated SigmaTheReal heading

--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<h1>Sigmathereal</h1>
-<p>Hello I am Skibidipavel</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SigmaTheReal</title>
+    <link href="style.css", rel="stylesheet">
+    <link
+            href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap"
+            rel="stylesheet"
+        />
+</head>
+<body>
+    <div class="name">
+        <span class="letter">S</span>
+        <span class="letter">i</span>
+        <span class="letter">g</span>
+        <span class="letter">m</span>
+        <span class="letter">a</span>
+        <span class="letter">T</span>
+        <span class="letter">h</span>
+        <span class="letter">e</span>
+        <span class="letter">R</span>
+        <span class="letter">e</span>
+        <span class="letter">a</span>
+        <span class="letter">l</span>
+    </div>
+    <p>I am SigmaTheReal, I am a real Sigma.</p>
+    <footer>
+        <div class="copyright">
+            <p>Made with ❤️ by SigmaTheReal</p>
+            <p>Copyright © 2025 SigmaTheReal</p>
+        </div>
+        <p>Please also visit <a href="https://coobik1234.github.io">Coobyk</a>'s website</p>
+    </footer>
+</body>
+</html>
