--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap"
             rel="stylesheet"
         />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        
 </head>
 <body>
     <div class="name">
