add telegram link

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <span class="letter">a</span>
         <span class="letter">l</span>
     </div>
-    <p>I am SigmaTheReal, I am a real Sigma.</p>
+    <p>i am sigmathereal, i am a real sigma.</p>
+    <a class="telegram" href="https://t.me/mango2918" target="_blank">my telegram</a>
     <footer>
         <div class="copyright">
-            <p>Made with ❤️ by SigmaTheReal</p>
-            <p>Copyright © 2025 SigmaTheReal</p>
+            <p>made with ❤️ by sigmathereal</p>
+            <p>copyright © 2025 sigmathereal</p>
         </div>
-        <p>Please also visit <a href="https://coobik1234.github.io">Coobyk</a>'s website</p>
+        <p>please also visit <a href="https://coobik1234.github.io" target="_blank">Coobyk</a>'s website</p>
     </footer>
 </body>
 </html>
