--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer>
         <div class="copyright">
             <p>made with ❤️ by sigmathereal</p>
-<p>assisted by <a href="https://coobik1234.github.io" target="_blank">Coobyk</a>'</p>
+<p>assisted by <a href="https://coobik1234.github.io" target="_blank">Coobyk</a></p>
             <p>copyright © 2025 sigmathereal</p>
         </div>
         <p>please also visit <a href="https://coobik1234.github.io" target="_blank">Coobyk</a>'s website</p>
