--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <footer>
         <div class="copyright">
             <p>made with ❤️ by sigmathereal</p>
-<p>assisted by <a href="https://coobik1234.github.io" target="_blank">Coobyk</a></p>
+<p>assisted by <a href="https://coobyk.github.io" target="_blank">Coobyk</a></p>
             <p>copyright © 2025 sigmathereal</p>
         </div>
-        <p>please also visit <a href="https://coobik1234.github.io" target="_blank">Coobyk</a>'s website</p>
+        <p>please also visit <a href="https://coobyk.github.io" target="_blank">Coobyk</a>'s website</p>
     </footer>
 </body>
 </html>
