--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <p>i am sigmathereal, i am a real sigma.</p>
 <h1>Buy telegram premium to my friend <a href="https://t.me/coobyk">Coobyk</a> if you want to support this site</h1>
+<h3>Do it for me please 🥺🥺🥺</h3>
     <a class="telegram" href="https://t.me/mango2918" target="_blank">my telegram</a>
     <footer>
         <div class="copyright">
